# GEAcompiler

./: .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  TODO.md
cmake/: cmake_uninstall.cmake.in
include/gea_compiler/: convert.h  scan_dir.h  types.h
include/gea_compiler/assets/: asset_file.h  meshes.h  textures.h
src/: main.cpp
src/convert/: convert.cpp
src/scan_dir/: scan_dir.cpp
test/: CMakeLists.txt
